more style added

--- a/birch.html
+++ b/birch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Delivery Dashboard - Birch Coffee</title>
+		<title>Odeko Delivery Dashboard - Birch Coffee</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
@@ -15,17 +15,19 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm">
-					<h1>Birch</h1>
-					<h4>Today's delivery dashboard</h4>
+					<h1>Odeko</h1>
+					<h4>Delivery Dashboard</h4>
 				</div>
 			</div>
 			<hr>
 			<div class="row">
 				<div class="col-sm">
+					<div class="logo"></div>
+					<h2>Birch Coffee</h2>
+					<p class="date">Wednesday, December 18</p>
 					<div id="locations"></div>
-
-					<svg id="map" width="760" height="720"></svg>
-					<div id='neighborhoodPopover'> </div>
+					<!--<svg id="map" width="760" height="720"></svg>
+					<div id='neighborhoodPopover'> </div>-->
 				</div>
 			</div>
 
