some style added

--- a/birch.html
+++ b/birch.html
@@ -12,7 +12,7 @@
 		
 	</head>
 	<body>
-		<div class="container-fluid">
+		<div class="container">
 			<div class="row">
 				<div class="col-sm">
 					<h1>Odeko</h1>
@@ -24,7 +24,7 @@
 				<div class="col-sm">
 					<div class="logo"></div>
 					<h2>Birch Coffee</h2>
-					<p class="date">Wednesday, December 18</p>
+					<p id="date">Today's Delivery</p>
 					<div id="locations"></div>
 					<!--<svg id="map" width="760" height="720"></svg>
 					<div id='neighborhoodPopover'> </div>-->
